--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "start:prod": "SET NODE_ENV=production & nodemon server.js",
-    "build": "webpack --mode development --watch"
+    "watch": "webpack --mode development --watch",
+    "build": "webpack --mode development --build"
   },
   "author": "Krish Panchal",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
