--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-csp": "^0.1.3",
@@ -63,6 +64,6 @@
     "regenerator-runtime": "^0.13.7"
   },
   "engines": {
-    "node": ">=10.0.0"
+    "node": "^12"
   }
 }
