--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon server.js",
     "start:prod": "SET NODE_ENV=production & nodemon server.js",
     "watch": "webpack --mode development --watch",
-    "build": "webpack --mode development --build"
+    "build": "npm install && webpack --mode development --build"
   },
   "author": "Krish Panchal",
   "license": "ISC",
